--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: kamaryos
+name: Abdullah Mert Tuncay
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
-
+description: Undergraduate Computer Engineering Student at METU
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
 
