--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,7 @@ name: Abdullah Mert Tuncay
 # Short bio or description (displayed in the header)
 description: Undergraduate Computer Engineering Student at METU
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
-#
-# Flags below are optional
+avatar: #png file
 #
 
 # Includes an icon in the footer for each username you enter
